# bookstore

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
.github/workflows/: build.yml  workflow-pr.yml
bookstore/: settings.py  urls.py
order/: factories.py  urls.py
order/migrations/: 0001_initial.py
order/models/: order.py
order/serializers/: order_serializer.py
order/tests/: test_order.py  test_order_viewset.py
product/: factories.py  urls.py
product/migrations/: 0001_initial.py  0002_remove_product_acitve_product_active.py
product/models/: category.py  product.py
product/serializers/: category_serializer.py  product_serializer.py
product/tests/: test_category.py  test_category_viewset.py  test_product.py  test_product_viewset.py
product/viewsets/: __init__.py  category_viewset.py  product_viewset.py
