[project]
name = "bookstore"
version = "0.1.0"
description = ""
authors = [{name = "Vitor Brito",email = "joaovitor16611661@gmail.com"}]
readme = "README.md"
requires-python = ">=3.12"

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.8"
django-rest-framework = "^0.1.0"
django-extensions = "^3.1.3"
django-debug-toolbar = "^3.2.2"
psycopg2-binary = "^2.9.2"
flake8 = "^4.0.1"
python-dotenv = {extras = ["cli"], version = "^1.0.1"}
faker = "^30.6.0"


[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
factory-boy = "^3.2.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
