[tool.poetry]
name = "bookstore"
version = "0.1.0"
description = ""
authors = ["Vitor Brito <joaovitor16611661@gmail.com>"]
readme = "README.md"
packages = [{include = "bookstore"}]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
Django = "^3.2.8"
django-rest-framework = "^0.1.0"
django-extensions = "^3.1.3"
django-debug-toolbar = "^3.2.2"
flake8 = "^4.0.1"
gitpython = "^3.1.44"
psycopg2-binary = "^2.9.2"
whitenoise = "^5.3.0"
sqlparse = "^0.5.0"
gunicorn = "^23.0.0"


[tool.poetry.group.dev.dependencies] 
pytest = "^6.2.5"
factory-boy = "^3.2.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
